--- a/frontend/templates/Residents/formVehicule.html
+++ b/frontend/templates/Residents/formVehicule.html
@@ -85,5 +85,6 @@
 <script>
     jQuery(document).ready(function() {
         $("#loadingIcon").fadeIn("slow");
+        ComponentsPickers.init();
     });
 </script>
