--- a/frontend/templates/Residents/home_service.html
+++ b/frontend/templates/Residents/home_service.html
@@ -29,20 +29,20 @@
                     </div>
                 </div>
                 <div class="portlet-body form gray-font">
-                  <div class="">
-                    <p>
-                        Mediante esta página podrás reportar la llegada un servicio a domicilio a tu casa
-                    </p>
-                    <p>
-                        Recuerda especificar el lugar de donde proviene
-                    </p>
-                    <p>
-                        Será válido por la próxima hora, despues de eso se eliminará el reporte ***
-                    </p>
-                  </div>
-                  <hr>
+                    <div class="">
+                        <p>
+                            Mediante esta página podrás reportar la llegada un servicio a domicilio a tu casa
+                        </p>
+                        <p>
+                            Recuerda especificar el lugar de donde proviene
+                        </p>
+                        <p>
+                            Será válido por la próxima hora, despues de eso se eliminará el reporte ***
+                        </p>
+                    </div>
+                    <hr>
                     <div class="form-group form-md-line-input">
-                        <textarea class="form-control" ng-model="note" rows="3" placeholder="Describe quien vendrá" required></textarea>
+                        <textarea class="form-control gray-font" ng-model="note" rows="3" placeholder="Describe quien vendrá" required></textarea>
                         <label for="form_control_1">Descripción</label>
                     </div>
                 </div>
