--- a/frontend/templates/admin/resident/index.html
+++ b/frontend/templates/admin/resident/index.html
@@ -21,7 +21,8 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <h3 class="page-title col-md-12 ">Residentes </h3>
+        <h3 class="page-title col-md-9 ">{{title}} </h3>
+
         <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
             <h1 class="text-center">
                 <img src="../../assets/global/img/loader4.gif" alt="" />
@@ -29,10 +30,11 @@
             </h1>
         </div>
         <div class="display-none" id="tableData">
+            <button type="submit" class="btn blue col-md-3 col-sm-3 col-xs-12 small-margin-bottom" ng-click="switchEnabledDisabledResidents()">{{buttonTitle}}</button>
             <div class="form-group col-md-offset-4 col-md-3 col-sm-offset-2  col-sm-4 col-xs-7 no-padding">
                 <label class="col-md-5 col-sm-5  col-xs-4 control-label no-padding gray-font">Filtrar por casa</label>
                 <div class="col-md-7 col-sm-7 col-xs-8 ">
-                    <select class="form-control gray-font" ng-change="findResidentsByHouse(house)" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                    <select class="form-control gray-font" ng-change="findResidentsByHouse(house)" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'id' track by house.id" required>
                     <option value="">Todas</option>
               </select>
                 </div>
@@ -58,6 +60,7 @@
                                 <th>Num casa</th>
                                 <th>Ver detalle</th>
                                 <th>Editar</th>
+                                <th>{{actionButtonTitle}}</th>
                                 <th>Eliminar</th>
                             </tr>
                         </thead>
@@ -70,6 +73,7 @@
                                 <td>{{resident.house_id}}</td>
                                 <td><a ui-sref="viewResident({id:resident.id})">Ver detalle</a></td>
                                 <td> <a ui-sref="editResident({id:resident.id})">Editar</a></td>
+                                <td> <a ng-click="disableEnabledResident(resident.id, resident.name, resident.last_name,resident.user_id,resident.is_owner,resident.company_id)">{{actionButtonTitle}}</a></td>
                                 <td> <a ng-click="deleteResident(resident.id, resident.name, resident.last_name)">Eliminar</a></td>
                             </tr>
                         </tbody>
