--- a/frontend/templates/admin/vehicule/new_vehicule.html
+++ b/frontend/templates/admin/vehicule/new_vehicule.html
@@ -45,7 +45,7 @@
                         <div class="form-body">
                             <div class="col-md-6">
                                 <div class="form-group form-md-line-input">
-                                    <input ng-model="license_plate" type="text" class="form-control specialCharacters" id="form_control_1" style='text-transform:uppercase' required>
+                                    <input ng-model="license_plate" type="text" class="form-control specialCharacters gray-font" id="form_control_1" style='text-transform:uppercase' required>
                                     <label for="form_control_1" class="font-15">Número de placa</label>
                                     <span class="help-block">Escriba el número de placa sin guiones</span>
 
@@ -92,6 +92,6 @@
 <script>
     jQuery(document).ready(function() {
         $("#loadingIcon").fadeIn("slow");
-         ComponentsPickers.init();
+        ComponentsPickers.init();
     });
 </script>
