--- a/frontend/templates/Officers/access_door.html
+++ b/frontend/templates/Officers/access_door.html
@@ -13,7 +13,38 @@
     <div class="col-md-3  col-sm-3  col-xs-5 ">
         <div class="top-menu">
             <ul class="nav navbar-nav pull-right">
-                <li class="dropdown dropdown-extended " id="header_notification_bar">
+
+                <li class="dropdown dropdown-extended" id="header_notification_bar">
+                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+                        <i class="icon-envelope-open"></i>
+                        <span class="badge badge-default">
+            {{notesQuantity}} </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="external">
+                            <h3><span class="bold">{{notesQuantity}}</span> Servicios a domicilio</h3>
+                            <a href="page_inbox.html">Ver todos</a>
+                        </li>
+                        <li>
+                            <ul class="dropdown-menu-list scroller" style="height: 325px;" data-handle-color="#637283">
+                                <li ng-repeat="note in notes | orderBy:'creation_date'">
+                                    <a href="inbox.html?a=view">
+
+                                        <span class="subject">
+                                            <span class="bold font-14 blue-font col-lg-5 col-md-5 no-padding">Casa {{note.house_id}}</span>
+                                        <span class="light-gray-font col-lg-7 col-md-7 text-right no-padding"> {{note.creation_time}}</span>
+                                        </span>
+                                        <span class="message ">{{note.description}}</span>
+                                    </a>
+                                </li>
+
+
+
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <!-- <li class="dropdown dropdown-extended " id="header_notification_bar">
                     <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                         <i class="icon-bell"></i>
                         <span class="badge badge-default">	7 </span>
@@ -40,7 +71,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <li class="dropdown dropdown-user">
                     <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                         <i class="icon-user " style="color: #607D8B; margin-top:3px; font-size:18px"></i>
@@ -72,11 +103,14 @@
                             <span class="input-group-addon ">
                                 <i class="fa fa-car"></i>
                                 </span>
-                            <input type="text" id="vehicule_license_plate" class="form-control height-12-percent font-19 input_id specialCharacters gray-font" ng-change="getVehicule()" ng-model="id_vehicule" placeholder="Número Placa">
+                            <input type="text" id="vehicule_license_plate" class="form-control height-12-percent font-19 input_id specialCharacters gray-font" ng-change="getVehicule()" ng-model="id_vehicule" placeholder="Número placa (sin guiones)">
                         </div>
-                        <span class="help-block"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Escriba el número de placa sin guiones</span>
+
                     </div>
-                    <div class="height-8-percent col-md-12 col-sm-12 hidden-xs"></div>
+                    <button class="btn   left-padding-10 col-md-1 col-sm-2   col-xs-2 btn-access-door height-39-pixel no-shadow" ng-click="deleteResidentVehiculeSpots()" title="Borrar texto" name="button">
+                        <span>  <i class="fa fa-times-circle font-20 gray-font" aria-hidden="true"></i></span>
+                    </button>
+                    <div class="height-12-percent col-md-12 col-sm-12 hidden-xs"></div>
                     <div class="form-group no-padding col-md-offset-2  col-md-8 col-sm-12">
                         <div class="input-group">
                             <span class="input-group-addon ">
@@ -86,14 +120,16 @@
                         </div>
 
                     </div>
-
+                    <button class="btn   left-padding-10 col-md-1 col-sm-2   col-xs-2 btn-access-door height-41-pixel no-shadow" ng-click="deleteResidentVehiculeSpots()" title="Borrar texto" name="button">
+                        <span>  <i class="fa fa-times-circle font-20 gray-font" aria-hidden="true"></i></span>
+                    </button>
 
 
                     <div class="height-4-percent col-md-12 col-sm-12 hidden-xs "></div>
 
                     <button type="submit" class="btn blue font-15 col-md-offset-2 col-md-7  col-sm-9 col-xs-9 btn-access-door" ng-click="searchVisitor()" name="button">Registrar visitante</button>
 
-                    <button class="btn red col-md-1 col-sm-2 col-xs-2 btn-access-door" id="access_key_button" ng-click="show=8" name="button">
+                    <button class="btn red col-md-1 col-sm-2 col-xs-2 btn-access-door" id="access_key_button" ng-click="show=8" name="button" title="Consultar clave de seguridad o emergencia">
                         <span>  <i class="fa fa-key font-17" aria-hidden="true"></i></span>
                     </button>
 
@@ -121,13 +157,13 @@
                             <h1 class="text-center"><img src="../../assets/global/img/2.gif" alt="" /></h1>
                         </div>
                         <div class="display-none " id="vehiculeAccess">
-                            <h1 class="page-title green-font bold text-center font-30 " id="access_tittle">Vehículo registrado</h1>
+                            <h1 class="page-title {{colorVehiculeRegistered}} bold text-center font-30 " id="access_tittle">{{vehiculeRegisteredTitle}}</h1>
                             <div class="col-md-12 col-sm-12 ">
-                                <div id="success-car-image" class="result-image "></div>
+                                <div id="{{imageVehiculeState}}" class="result-image "></div>
                             </div>
                             <div class="height-5-percent hidden-md col-sm-12 hidden-xs "></div>
                             <div class="access_car_information gray-font text-center col-md-4 col-sm-6 col-xs-12 no-padding">
-                                <h5 class="bold font-30">{{license_plate}}</h5>
+                                <h5 class="bold font-30" style="text-transform: uppercase;">{{license_plate}}</h5>
                                 <h5 class="font-20">Placa</h5>
                             </div>
 
@@ -159,7 +195,7 @@
                             <h1 class="text-center"><img src="../../assets/global/img/2.gif" alt="" /></h1>
                         </div>
                         <div class="display-none" id="residentAccess">
-                            <h1 class="page-title green-font bold text-center font-30 " id="registered_access_tittle">Residente registrado</h1>
+                            <h1 class="page-title {{colorResidentRegistered}} bold text-center font-30 " id="registered_access_tittle">{{residentRegisteredTitle}}</h1>
                             <div class="" id="success-resident-image">
                                 <img src="http://www.qtem.org/files/attach/images/contact/5438/BVP%20profile%20sq%202.jpg " id="success-resident-image" class="img-rounded" />
                             </div>
@@ -180,7 +216,7 @@
                                 <h5 class="font-30 bold text-center "> {{indentification}}</h5>
                                 <h5 class=" font-20 text-center">Cédula</h5>
                             </div>
-                            <div class="height-5-percent col-md-4 col-sm-12 hidden-xs text-center"></div>
+                            <div class="height-5-percent col-md-4 col-sm-12 hidden-xs hidden-sm text-center"></div>
                             <button type="submit" class="btn red font-11 col-md-4 col-sm-12 col-xs-12 btn-access-door " ng-click="getKeys()" name="buton ">Ver claves </button>
 
 
@@ -239,7 +275,7 @@
                                     <div class="form-group  col-md-12 no-padding">
                                         <label class="col-md-4 col-sm-3 col-xs-5 gray-font">Número de casa</label>
                                         <div class="form-group col-md-8 col-sm-9 col-xs-7">
-                                            <select class="form-control gray-font" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                                            <select class="form-control gray-font" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'id' track by house.id" required>
                                                 <option value="">Seleccione una casa</option>
                                             </select>
                                         </div>
@@ -262,14 +298,14 @@
                         </div>
                         <div class="height-5-percent col-md-12 hidden-sm hidden-xs "></div>
                         <div class="portlet-body form">
-                            <form role="form" ng-submit="insertVisitor()">
+                            <form role="form" ng-submit="getKeyInformation()">
                                 <div class="form-body">
                                     <div class="form-group col-md-12">
                                         <div class="input-group">
                                             <span class="input-group-addon">
                                         <i class="fa fa-key"></i>
                                         </span>
-                                            <input type="text" ng-change="getVisitor()" ng-model="visitor_id_number" class="form-control  height-12-percent font-19 " id="identification_number" placeholder="Clave de seguridad o emergencia">
+                                            <input type="text" ng-model="security_key" class="form-control gray-font height-12-percent font-19 " id="identification_number" placeholder="Clave de seguridad o emergencia">
                                         </div>
                                         <h3 class="text-right ">
                                               <button type="submit" class="btn blue "><i class="fa fa-pencil "></i>Consultar</button>
@@ -279,6 +315,73 @@
 
                                 </div>
                             </form>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 col-sm-12 col-xs-12 " ng-show="show==9 ">
+                        <div class="col-md-2 col-sm-12 col-xs-12 no-padding">
+                            <button type="button" ng-click="show=4; security_key=''" class="btn default gray-font ">Cerrar</button>
+                        </div>
+
+                        <div class=" col-md-10 portlet-title gray-font">
+                            <div class="caption text-center font-30">
+                                {{emergencySecurityKeyTitle}}
+                            </div>
+                        </div>
+                        <div class="height-1-percent col-md-12 hidden-sm hidden-xs "></div>
+                        <div class="portlet-body ">
+                            <div class="col-md-4">
+                                <div class="access_car_information gray-font ">
+                                    <h5 class=" font-19">Casa: <span class="bold">{{key_house_number}}</span> </h5>
+
+                                </div>
+                            </div>
+                            <div class="col-md-8 no-padding">
+                                <div class="access_car_information gray-font ">
+                                    <h5 class=" font-19">Clave emergencia: <span class="bold">{{emergency_security_key}}</span> </h5>
+
+                                </div>
+                            </div>
+                            <div class="caption text-center gray-font font-19">
+                                Residentes de la filial
+                            </div>
+                            <div class="table-scrollable" id="tableResidentsByKey">
+                                <table ng-show="residents.length>0" class="table table-striped table-hover font-12">
+                                    <thead>
+                                        <tr>
+                                            <th>Nombre completo</th>
+                                            <th>Cédula</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="resident in residents | filter:search | orderBy:'name'">
+                                            <td>{{resident.name}}</td>
+                                            <td>{{resident.identification_number}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="caption text-center gray-font font-19">
+                                Vehículos de la filial
+                            </div>
+                            <div class="table-scrollable" id="tableVehiculesByKey">
+                                <table class="table table-striped table-hover font-12">
+                                    <thead>
+                                        <tr>
+                                            <th>Placa</th>
+                                            <th>Marca</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="vehicule in vehicules |  orderBy:'name'">
+                                            <td style="text-transform: uppercase;">{{vehicule.license_plate}}</td>
+                                            <td>{{vehicule.brand}}</td>
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-12 col-xs-12 " ng-show="show==10">
@@ -435,9 +538,4 @@
         </div>
 
     </div>
-</div>
-
-</div>
-
-</div>
 </div>
