--- a/frontend/templates/Residents/index_residents.html
+++ b/frontend/templates/Residents/index_residents.html
@@ -23,34 +23,41 @@
 </div>
 
 <div class="row ">
+    <div class="col-lg-12 col-md-12 gray-font ">
 
-    <div class="col-md-12 gray-font ">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <h3 class="page-title col-md-10 col-sm-9 col-xs-12">Habitantes de la filial </h3>
-            <button type="submit" class="btn green col-md-2 col-sm-3 col-xs-12 small-margin-bottom" ui-sref="newCondomino()">Registrar residente</button>
+        <div>
+            <h3 class="page-title col-md-4 col-lg-6 col-xs-12 col-sm-4">{{titleCondominosIndex}}</h3>
+
         </div>
-        <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
-            <h1 class="text-center"><img src="../../assets/global/img/loader4.gif" alt="" /></h1>
-        </div>
-        <div class="display-none " id="residents_container">
+        <div>
 
-            <div class="col-md-3 col-sm-3 col-xs-12" ng-repeat="resident in residents">
-                <div class="portlet light bordered  text-center  col-sm-12 col-xs-12" id="residents_container">
-                    <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="160px" height="160px" class="img-circle"/></h3>
-                    <h3 class="no-padding text-center font-20">{{resident.name}} {{resident.last_name}}</h3>
-                    <h5 class="no-padding text-center font-17">{{resident.identification_number}}</h5>
+            <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+                <h1 class="text-center"><img src="../../assets/global/img/loader4.gif" alt="" /></h1>
+            </div>
+            <div class="display-none " id="residents_container">
+                <div class="col-md-4 col-sm-4 col-xs-12 col-lg-3">
+                    <button type="submit" class="btn blue small-margin-bottom col-sm-12 col-lg-12 col-xs-12 " ng-click="swithEnabledDisabledResidentes()">{{buttonDisabledEnabled}}</button>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12 col-lg-3 no-padding">
+                    <button type="submit" class="btn green small-margin-bottom col-sm-12 col-lg-12 col-xs-12 col-md-12" ui-sref="newCondomino()">Registrar residente</button>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-12" ng-repeat="resident in residents  | orderBy:'name'">
+                    <div class="portlet light bordered  text-center  col-sm-12 col-xs-12" id="residents_container">
+                        <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="160px" height="160px" class="img-circle"/></h3>
+                        <h3 class="no-padding text-center font-20">{{resident.name}} {{resident.last_name}}</h3>
+                        <h5 class="no-padding text-center font-17">{{resident.identification_number}}</h5>
 
-                    <div class="col-lg-12 col-md-12 small-margin-top">
-                        <button type="submit" ui-sref="editCondomino({id:resident.id})" class="btn blue"><i class="fa fa-pencil "></i></button>
-                        <button type="submit" ng-click="deleteCondomino(resident.id,resident.house_id,resident.name,resident.last_name)" class="btn red"><i class="fa fa-trash "></i></button>
+                        <div class="col-lg-12 col-md-12 small-margin-top">
+                            <button type="submit" ui-sref="editCondomino({id:resident.id})" class="btn blue" title="Editar residente"><i class="fa fa-pencil " ></i></button>
+                            <button type="submit" id="disabledButton" ng-click="disableEnabledResident(resident.id,resident.house_id,resident.name,resident.last_name,resident.user_id,resident.is_owner,resident.company_id)" ng-hide="isUser(resident)" class="btn {{color}}" title="{{titleDisabledButton}}"><i class="{{iconDisabled}}"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<script>
-    jQuery(document).ready(function() {
-        $("#loadingIcon").fadeIn("slow");
-    });
-</script>
+    <script>
+        jQuery(document).ready(function() {
+            $("#loadingIcon").fadeIn("slow");
+        });
+    </script>
