--- a/frontend/templates/admin/resident/form.html
+++ b/frontend/templates/admin/resident/form.html
@@ -89,7 +89,7 @@
                         </div>
                         <div ng-show="permisson ==2" class="form-group form-md-line-input has-info">
 
-                            <select class="form-control gray-font" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                            <select class="form-control gray-font" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'id' track by house.id" required>
                                   <option value="">Seleccione una casa</option>
                             </select>
 
