--- a/frontend/templates/Login/login.html
+++ b/frontend/templates/Login/login.html
@@ -4,10 +4,10 @@
 
         </div>
         <div class=" medium-padding">
-            <h1>Shield Login</h1>
+            <h1>Bienvenido a Guardian</h1>
             <br>
             <p>
-                Lorem ipsum dolor sit amet, coectetuer adipiscing elit sed diam nonummy et nibh euismod aliquam erat volutpat. Lorem ipsum dolor sit amet, coectetuer adipiscing.
+                Administra la seguridad de tu hogar y tus seres queridos de una forma ágil y sencilla. Nos preocupamos por tu seguridad.
             </p>
             <form ng-submit="beginSesion(loginForm)" role="form" ng-init="loginForm = {}" name="login" ng-show='!isResetingPassword'>
                 <div class="huge-margin-top">
