--- a/frontend/templates/Residents/home_service.html
+++ b/frontend/templates/Residents/home_service.html
@@ -15,7 +15,7 @@
         <div class="btn-group pull-right"> </div>
     </div>
 </div>
-<div class="row">
+<div class="row display-none" id="all">
     <div class="col-md-12">
         <form ng-submit="actionButton()">
             <div class="portlet light bordered">
@@ -57,3 +57,8 @@
     </form>
 </div>
 </div>
+<script type="text/javascript">
+    $(function() {
+        $("#all").fadeIn("slow");
+    })
+</script>
