--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -136,7 +136,7 @@
                     </li>
                 </ul>
             </li>
-            <li ng-show="isResident()" ui-sref="reportEmergency()" class="start" ng-class="{ 'active' : active === 'reportEmergency'  }">
+            <li ng-show="isResident()" ui-sref="reportEmergency()" class="start" ng-class="{ 'active' : active === 'reportemergencyactive'  }">
                 <a href="javascript:;">
                     <i class="fa fa-ambulance" aria-hidden="true"></i>
                     <span class="title "> Reportar emergencia</span>
