--- a/frontend/templates/Residents/index_residents.html
+++ b/frontend/templates/Residents/index_residents.html
@@ -11,7 +11,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a> Habitantes</a>
+            <a> Residentes</a>
         </li>
 
     </ul>
