--- a/frontend/templates/Residents/keyConfiguration.html
+++ b/frontend/templates/Residents/keyConfiguration.html
@@ -31,7 +31,7 @@
                 <div class="portlet-body form ">
 
                     <p class="font-15 gray-font">
-                        Las claves de seguridad son utilizadas para
+                        Las claves de seguridad son utilizadas para determinar tu identidad en los siguientes casos:
                     </p>
                     <p class="font-15 gray-font">
                         * Debe tomar en cuenta que las claves deben ser legibles para el oficial o el administrador
