--- a/frontend/templates/Residents/formResident.html
+++ b/frontend/templates/Residents/formResident.html
@@ -17,6 +17,29 @@
         <div class="btn-group pull-right"> </div>
     </div>
 </div>
+<div id="direct_upload"
+    ngf-drop="uploadFiles($files)"
+    ngf-drag-over-class="dragOverClass($event)"
+    ng-model="files"
+    ng-multiple="true">
+<form>
+    <div class="form_line">
+        <label path="title">Title:</label>
+        <div class="form_controls">
+            <input type="text" class="form-control" placeholder="Title" ng-model="title" />
+        </div>
+    </div>
+    <div class="form_line">
+        <label>Image:</label>
+        <div class="form_controls">
+            <div class="upload_button_holder">
+                <div href="#" class="upload_button" ngf-select="uploadFiles($files)" multiple title="upload" resetOnClick="true" >Upload</div>
+            </div>
+
+        </div>
+    </div>
+</form>
+</div>
 <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
     <h1 class="text-center">
         <img src="../../assets/global/img/loader4.gif" alt="" />
@@ -32,9 +55,6 @@
                         <div class="caption font-green-haze">
                             <i class="fa fa-user font-green-haze"></i>
                             <span class="caption-subject bold uppercase">{{title}}</span>
-                        </div>
-                        <div class="actions">
-                            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
                         </div>
                     </div>
                     <div class="portlet-body form display-none" id="register_edit_form">
@@ -69,7 +89,7 @@
                             </div>
 
                             <div class="form-group form-md-line-input">
-                                <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control numbers gray-font" id="form_control_1" required>
+                                <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control numbers gray-font" id="form_control_1">
                                 <label for="form_control_1" class="font-15">Número celular</label>
                             </div>
                             <div class="form-group form-md-line-input ">
@@ -82,7 +102,7 @@
                         <div class="height-12-percent col-md-6 col-sm-6 hidden-xs"></div>
                         <div class="form-actions noborder ">
                             <h3 class="text-right ">
-                            <button type="submit" class="btn blue"><i class="fa fa-pencil "></i> {{button}}</button>
+                            <button type="submit" class="btn blue"><i class="fa fa-pencil" ng-show="button=='Editar'"></i> {{button}}</button>
                             <button type="button" ui-sref="condominos()" class="btn red default">Cancelar</button>
                           </h3>
                         </div>
