--- a/frontend/templates/Residents/home_service.html
+++ b/frontend/templates/Residents/home_service.html
@@ -24,20 +24,18 @@
                         <i class="fa fa-motorcycle font-green-haze"></i>
                         <span class="caption-subject bold uppercase">Reportar Servicio a domicilio</span>
                     </div>
-                    <div class="actions">
-                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
-                    </div>
                 </div>
                 <div class="portlet-body form gray-font">
                     <div class="">
                         <p>
-                            Mediante esta página podrás reportar la llegada un servicio a domicilio a tu casa
+                            Mediante esta página podrás reportar la llegada de un servicio a domicilio a tu casa.
                         </p>
                         <p>
-                            Recuerda especificar el lugar de donde proviene
+                            Recuerda especificar la compañia de donde proviene.
                         </p>
                         <p>
-                            Será válido por la próxima hora, despues de eso se eliminará el reporte ***
+                            <b>
+                            El reporte será válido por la próxima hora, después de eso ya no tendrá validez.</b>
                         </p>
                     </div>
                     <hr>
