--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -117,7 +117,10 @@
 <script src="../../assets/global/scripts/watchesFactory.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/watchesController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/bootbox.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment-with-locales.js"></script>
+<script type="text/javascript">
+moment.locale('es');
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js "></script>
 <script src="../../assets/admin/layout/scripts/layout.js " type="text/javascript "></script>
 <script src="../../assets/admin/layout/scripts/quick-sidebar.js " type="text/javascript "></script>
