--- a/frontend/templates/admin/vehicule/new_vehicule.html
+++ b/frontend/templates/admin/vehicule/new_vehicule.html
@@ -35,10 +35,6 @@
                         <i class="fa fa-car font-green-haze"></i>
                         <span class="caption-subject bold uppercase">{{title}}</span>
                     </div>
-                    <div class="actions">
-                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
-                        </a>
-                    </div>
                 </div>
                 <div class="portlet-body form">
                     <form role="form" ng-submit="actionButton()">
@@ -60,7 +56,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group form-md-line-input has-info">
-                                    <select class="form-control gray-font" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                                    <select class="form-control gray-font" data-ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'id' track by house.id" required>
                                     <option value="">Seleccione una casa</option>
                               </select>
                                     <label for="form_control_1" class="font-15">Número de casa</label>
@@ -77,7 +73,7 @@
                             </div>
                             <div class="form-actions noborder">
                                 <h3 class="text-right">
-                            <button type="submit" class="btn blue"><i class="fa fa-pencil"></i> {{button}}</button>
+                            <button type="submit" class="btn blue"><i class="fa fa-pencil" ng-show="button=='Editar'"></i> {{button}}</button>
                             <button type="button" ui-sref="vehicules()"  class="btn red default">Cancelar</button>
                           </h3>
                             </div>
