--- a/frontend/templates/Residents/formVisitor.html
+++ b/frontend/templates/Residents/formVisitor.html
@@ -35,11 +35,11 @@
                             <label for="form_control_1" class="font-15">Número de cédula</label>
                         </div>
                         <div class="form-group form-md-line-input">
-                            <input ng-model="name" type="text" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="name" type="text" style="text-transform: capitalize" class="form-control letters gray-font" id="form_control_1" required>
                             <label for="form_control_1" class="font-15">Nombre</label>
                         </div>
                         <div class="form-group form-md-line-input">
-                            <input ng-model="last_name" type="text" class="form-control letters gray-font" id="form_control_1">
+                            <input ng-model="last_name" type="text" style="text-transform: capitalize" class="form-control letters gray-font" id="form_control_1">
                             <label for="form_control_1" class="font-15">Primer Apellido</label>
                         </div>
 
@@ -47,12 +47,12 @@
 
                     <div class="col-md-6 col-sm-6  marging-top-20">
                         <div class="form-group form-md-line-input">
-                            <input ng-model="second_last_name" type="text" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="second_last_name" style="text-transform: capitalize" type="text" class="form-control letters gray-font" id="form_control_1" required>
                             <label for="form_control_1" class="font-15">Segundo Apellido</label>
                         </div>
 
                         <div class="form-group form-md-line-input">
-                            <input ng-model="license_plate" type="text" style="text-transform:uppercase" class="form-control letters gray-font" id="form_control_1">
+                            <input ng-model="license_plate" type="text" style="text-transform:uppercase" class="form-control specialCharacters gray-font" id="form_control_1">
                             <label for="form_control_1" class="font-15">Número de placa (opcional)</label>
                         </div>
 
@@ -103,7 +103,7 @@
 </div>
 <script>
     $(function() {
-      $("#all").fadeIn("slow");
+        $("#all").fadeIn("slow");
         $('.timepicker').keydown(function() {
             return false;
         });
