--- a/frontend/templates/Residents/home_absence.html
+++ b/frontend/templates/Residents/home_absence.html
@@ -38,7 +38,7 @@
                 <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
                     <h1 class="text-center"><img src="../../assets/global/img/loader4.gif" alt=""/></h1>
                 </div>
-                <div class=" display-none" id="div">
+                <div class="display-none" id="register_edit_form">
                     <div ng-show="desocupated == 1">
                         <form ng-submit="cancelAbscence()">
                             <h3 class="small-margin-bottom text-center">Te has reportado ausente</h3>
