--- a/frontend/templates/Residents/index_vehicules.html
+++ b/frontend/templates/Residents/index_vehicules.html
@@ -11,7 +11,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a>Mis vehiculos</a>
+            <a>Mis vehículos</a>
 
         </li>
 
@@ -60,7 +60,7 @@
             </div>
 
         </div>
-        <h1 class="text-center gray-font " ng-show="noVehiculeResult==1 ">No hay vehículos registrados</h1>
+
     </div>
 
 </div>
