--- a/frontend/templates/admin/house/index.html
+++ b/frontend/templates/admin/house/index.html
@@ -42,7 +42,7 @@
                         <thead>
                             <tr>
                                 <th>Número</th>
-                                <th>Extención</th>
+                                <th>Extensión</th>
                                 <th>Ver claves de seguridad</th>
                                 <th>Editar</th>
                                 <!-- <th>Eliminar</th> -->
