--- a/frontend/templates/admin/resident/info.html
+++ b/frontend/templates/admin/resident/info.html
@@ -34,7 +34,7 @@
                             <span class="caption-subject bold uppercase">{{title}}</span>
                         </div>
                         <div class="actions">
-                            <span class="font-15 gray-font">Autorizador de filial: <span class="bold">{{authorizer}}</span> </span>
+                            <span class="font-15 gray-font">Autorizado de filial: <span class="bold">{{authorizer}}</span> </span>
                         </div>
                     </div>
                     <div class="portlet-body form">
