--- a/frontend/templates/admin/header.html
+++ b/frontend/templates/admin/header.html
@@ -6,9 +6,9 @@
 			<a href="index.html">
 				<img src="../../assets/admin/layout/img/logo.png" alt="logo" class="logo-default" />
 			</a>
-			<div class="menu-toggler sidebar-toggler">
-				<!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
-			</div>
+			<!-- <div class="menu-toggler sidebar-toggler">
+
+			</div> -->
 		</div>
 		<!-- END LOGO -->
 		<!-- BEGIN RESPONSIVE MENU TOGGLER -->
