--- a/frontend/templates/admin/house/form.html
+++ b/frontend/templates/admin/house/form.html
@@ -39,10 +39,7 @@
                         <i class="fa fa-home  font-green-haze"></i>
                         <span class="caption-subject bold uppercase">{{title}}</span>
                     </div>
-                    <div class="actions">
-                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
-                        </a>
-                    </div>
+
                 </div>
                 <div class="portlet-body form display-none" id="register_edit_form">
                     <form role="form" ng-submit="actionButton()">
@@ -76,7 +73,7 @@
 
                             <div class="form-actions noborder">
                                 <h3 class="text-right">
-                            <button type="submit" class="btn blue"><i class="fa fa-pencil"></i> {{button}}</button>
+                            <button type="submit" class="btn blue"><i class="fa fa-pencil" ng-show="button=='Editar'"></i> {{button}}</button>
                             <button type="button"  ui-sref="houses()" class="btn red default">Cancelar</button>
                           </h3>
                             </div>
