--- a/frontend/templates/admin/resident/form.html
+++ b/frontend/templates/admin/resident/form.html
@@ -33,13 +33,11 @@
                             <i class="fa fa-user font-green-haze"></i>
                             <span class="caption-subject bold uppercase">{{title}}</span>
                         </div>
-                        <div class="actions">
-                            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
-                        </div>
+
                     </div>
 
                     <div ng-show="permisson===2" class="col-md-offset-9 col-md-3 col-sm-offset-8 col-sm-4 col-xs-12">
-                        <span class=" font-15 gray-font col-md-10 col-sm-10 col-xs-10">Autorizador de filial: </span>
+                        <span class=" font-15 gray-font col-md-10 col-sm-10 col-xs-10">Autorizado de filial: </span>
                         <div class="lg-checkbox-list col-md-2 col-sm-2 col-xs-2">
                             <div class="md-checkbox">
                                 <input type="checkbox" id="checkbox1" ng-model="isOwner" class="md-check">
@@ -75,12 +73,12 @@
 
                     <div class="col-md-6 col-sm-6  marging-top-20">
                         <div class="form-group form-md-line-input">
-                            <input ng-model="birthday" type="text" class="form-control date-picker gray-font" placeholder="" required>
+                            <input ng-model="birthday" type="text" ng-change="keepDate()" class="form-control date-picker gray-font" placeholder="" required>
                             <label for="form_control_1" class="font-15">Fecha de nacimiento</label>
                         </div>
 
                         <div class="form-group form-md-line-input">
-                            <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control numbers gray-font" required>
+                            <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" maxlength="20" class="form-control numbers gray-font">
                             <label for="form_control_1" class="font-15">Número celular</label>
                         </div>
                         <div class="form-group form-md-line-input ">
@@ -98,7 +96,7 @@
                     </div>
                     <div class="form-actions noborder ">
                         <h3 class="text-right ">
-                            <button type="submit" class="btn blue"><i class="fa fa-pencil "></i> {{button}}</button>
+                            <button type="submit" class="btn blue"><i class="fa fa-pencil "ng-show="button=='Editar'"></i> {{button}}</button>
                             <button type="button" ui-sref="residents()" class="btn red default">Cancelar</button>
                           </h3>
                     </div>
